query not success

--- a/EF/EF.csproj
+++ b/EF/EF.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\CarsController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -232,6 +233,7 @@
     <Content Include="Views\Movies\Delete.cshtml" />
     <Content Include="Views\Movies\Lists.cshtml" />
     <Content Include="Views\Movies\Change.cshtml" />
+    <Content Include="Views\Cars\Lists.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
